I have fix all the problems and I added many features to the game

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="win-window" hidden>You win</div>
     <canvas id="canvas"></canvas>
     <script src="js/main.js" type="module"></script>
   </body>
